--- a/BACK/pom.xml
+++ b/BACK/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.example</groupId>
 	<artifactId>proyecto_c3.2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>proyecto_c3.2</name>
-	<description>Demo project for Spring Boot</description>
+	<name>IPSMintic</name>
+	<description>Backend IPS</description>
 	<properties>
 		<java.version>18</java.version>
 	</properties>
@@ -53,11 +53,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin> 
-				<groupId>com.heroku.sdk</groupId>
-				 	<artifactId>heroku-maven-plugin</artifactId> 
-				<version>3.0.4</version> 
-			</plugin>
+			<plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.5.1</version>
+         <configuration>
+             <source>1.8</source>
+             <target>1.8</target>
+         </configuration>
+     </plugin>
 		</plugins>
 	</build>
 
